auth with multiple providers now working

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <!-- all changes from Firebase magically appear here! -->
         <h1>You said: {{ data.text }}</h1>
         
-        <a ng-click="signInWith('google')">google</a>
-        <a ng-click="signInWith('facebook')">facebook</a>
-        <a ng-click="signInWith(email)">email</a>
-        <a ng-click="signInWith(twitter)">twitter</a>
+        <a href="#" ng-click="signInWith('google')">google</a>
+        <a href="#" ng-click="signInWith('facebook')">facebook</a>
+        <a href="#" ng-click="signInWith(email)">email</a>
+        <a href="#" ng-click="signInWith(twitter)">twitter</a>
         
         <h3>btw: ur currently logged in as: {{ loggedUser }}</h3>
 
