--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
         
         <a href="#" ng-click="signInWith('google')">google</a>
         <a href="#" ng-click="signInWith('facebook')">facebook</a>
-        <a href="#" ng-click="signInWith('email')">email</a>
-        <a href="#" ng-click="signInWith('twitter')">twitter</a>
+        <a href="#" ng-click="signInWith('twitter')">twitter</a> | 
+        <a ng-click="signInWith('email')">email (not yet hooked up)</a>
         
         <h3>btw: ur currently logged in as: {{ loggedUser }}</h3>
 
         <p>Full returned user data object:</p>
 
-        <code>{{fullUserData}}</code>
+        <code>{{ fullUserData }}</code>
 
     </body>
 </html>
